k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trade-republic-tracker
  labels:
    name: trade-republic-tracker
