k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trade-republic-tracker
  namespace: trade-republic-tracker
  labels:
    app: trade-republic-tracker
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: trade-republic-tracker
